--- a/Blogz.csproj
+++ b/Blogz.csproj
@@ -63,6 +63,12 @@
     <Compile Include="CategoryControl.Designer.cs">
       <DependentUpon>CategoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="CategoryCreateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CategoryCreateForm.Designer.cs">
+      <DependentUpon>CategoryCreateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Essentials.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -96,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CategoryControl.resx">
       <DependentUpon>CategoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CategoryCreateForm.resx">
+      <DependentUpon>CategoryCreateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
