--- a/Blogz.csproj
+++ b/Blogz.csproj
@@ -128,6 +128,7 @@
     <EmbeddedResource Include="RemoveImageForm.resx">
       <DependentUpon>RemoveImageForm.cs</DependentUpon>
     </EmbeddedResource>
+    <Compile Include="IdGetter.cs" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
