--- a/Blogz.csproj
+++ b/Blogz.csproj
@@ -151,5 +151,8 @@
   <ItemGroup>
     <None Include="Resources\IconOpened.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Screenshots\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
